style.scss
@use "sass:string";
@use 'sass:list';
@import './animation.scss';

@function gtkalpha($color, $alpha) {
  @return string.unquote("alpha(#{$color},#{$alpha})");
}

* { all: unset; } // Unsets everything so you can style everything from scratch
.side-left { min-width: 450px }
.side-right { min-width: 1441px }
.screen { border: 2px solid #0A102E }
.copyable { &:hover { text-decoration: underline;} }
.debug { background-color: red; color: black; .debug { background-color: blue; .debug { background-color: green; } } }
.layer-image { border: 0.7px solid #3253F6; box-shadow: 0px 0px 5px gtkalpha(#3253F6, 0.25); min-width: 230px;}
.layer-title { font-family: Chakra Petch; font-size: 6px; color: #20274d; font-weight: bold; letter-spacing: 1.1px;}
.layer-number { font-family: Chakra Petch; font-size: 12px; color: #3253F6; font-weight: bold; letter-spacing: 1.5px; text-shadow: 0px 2px 4px gtkalpha(#3253F6, 0.25);}
.border-default { border: 1.5px solid #0A102E; }
.shadow { box-shadow: 0px 0px 5px gtkalpha(black, 0.5); }
.uppercase { text-transform: uppercase; }

window.Dashboard { background: linear-gradient(to bottom, #070B1F, #040714); }

.blinking-square {
  @include apply-blink-animation(700ms);
  box-shadow: 0px 0px 10px gtkalpha(#00AD1D, 0.5);
  background-color: #00AD1D;
  min-width: 5px;
  margin-top: 3.5px;
  margin-bottom: 3.5px;
}

.panel {
  @include apply-start-animation(200ms);
  border-radius: 0;
  background-color: #0A102E;
  border-left: 5px solid #3353F3;
  padding-left: 10px;
  padding-right: 5px;
  padding-top: 10.5px;
  padding-bottom: 10.5px;
  font-family: Chakra Petch;
  font-size: 12px;
  letter-spacing: 1.6px;
  color: #c6cfff;
  text-shadow: 0px 1px 4px hsla(230, 50%, 60%, 0.2);
  font-weight: bold;
  &:hover { background-color: #0B1132; }
  &:active { background-color: #0D143B; }
}

.notification {
  @include apply-start-animation(500ms);
  background: gtkalpha(#040714, 0.5);
  border: 1.5px solid #0B1233;
  padding: 10px;

  &.critical {
    border: 0.5px solid #F32626;
    border-left: 3px solid #F32626;
    background: gtkalpha(#120000, 0.3);
    .title { color: #F32626; }
    .close-button { background-color: #F32626; &:hover { background-color: gtkalpha(#F32626, 0.5); } }
    .entry { color: #aa1b1b; .value { color: #e91111; } }
  }

  .title {
    font-family: Chakra Petch;
    font-size: 13px;
    color: #9EA6CC;
    font-weight: 600;
  }
  .close-button {
    background-color: gtkalpha(#9EA6CC, 0.8);
    padding-left: 1px;
    padding-right: 1px;
    &:hover { background-color: gtkalpha(#9EA6CC, 0.5); }
  }
}

.action-button {
  // background-color: #9EA6CC;
  background-color: gtkalpha(#152052, 0.4);
  color: #6E78A7;
  border: 1px solid #0B1233;
  padding-top: 6px;
  padding-bottom: 6px;
  padding-left: 10px;
  padding-right: 10px;
  font-family: Chakra Petch;
  font-size: 10px;
  font-weight: 600;
  label { text-transform: uppercase;}
  &:hover { 
    background-color: gtkalpha(#192557, 0.5);
    border: 1px solid gtkalpha(#141d3f, 0.7);
  }
}

.card-component {
  background: linear-gradient(to left, hsla(230, 63%, 11%, 0.5), hsla(0, 0%, 0%, 0.5), hsla(230, 63%, 11%, 0.5));
  .card-content {
    @include apply-start-animation(500ms);
    border-left: 1.5px solid #0A102E;
    border-right: 1.5px solid #0A102E;
    border-bottom: 1.5px solid #0A102E;
    levelbar {
      trough {
        block.filled { background-color: #213AB4; }
        block { background: hsla(229, 65%, 12%, 0.5); }
      }
    }
    .content {
      margin: 8px;
    }
    .profile-picture {
      border: 1px solid #0B1233;
      box-shadow: 0px 2px 4px 0px hsla(0, 0%, 0%, 0.2);
    }
    .extended-content {
      label { @include apply-stagger-animation; }
      font-family: Kode Mono;
      font-size: 6px;
      color: #8B91B2;
      margin-left: 8px;
      margin-right: 8px;
      margin-bottom: 8px;
      padding: 7px;
      padding-bottom: 0px;
      border: 1px solid #0B1233;
    }
    .NoiseGrid {
      margin: 8px;
      margin-top: 0px;
      min-height: 45px;
    }
  }
}

.entry {
  font-family: Rajdhani;
  font-size: 9px;
  font-weight: 600;
  color: #6E78A7;
  .value { color: #9EA6CC; }
}

.special-entry {
  font-family: Rajdhani;
  font-size: 9px;
  font-weight: 600;
  color: #1C2552;
  .value { color: #515EA0; }
}

popover.menu label {
  text-transform: uppercase;
}

menubutton {
  popover {
    contents{
      background: linear-gradient(to bottom, #070B1F, #040714);
      border: 1.5px solid #0A102E;
      font-family: Rajdhani;
      font-size: 12px;
      font-weight: 600;
      color: #6E78A7;
      scrolledwindow {
        modelbutton:hover {
          background-color: hsla(230, 64%, 11%, 0.6);
          color: #C6CFFF;
          border-left: 3px solid #3353F3;
          padding-top: 7px;
          padding-bottom: 7px;
          padding-left: 5px;
          padding-right: 8px;
        }
        modelbutton {
          padding-top: 7px;
          padding-bottom: 7px;
          padding-left: 8px;
          padding-right: 8px;
        }
        modelbutton:first-child:disabled {
          background-color: #0A102E;
          color: #C6CFFF;
          font-family: Chakra Petch;
          font-size: 12px;
          font-weight: bold;
          border-left: 6px solid #3353F3;
          padding-top: 10px;
          padding-bottom: 10px;
          padding-left: 0px;
          padding-right: 15px;
          margin-bottom: 6px;
        }
        padding: 2px;
        background: linear-gradient(to left, hsla(230, 63%, 11%, 0.5), hsla(0, 0%, 0%, 0.5), hsla(230, 63%, 11%, 0.5));
      }
      arrow { background: transparent}
    }
  }
  arrow { background: #0A102E }
}

calendar {
  background: linear-gradient(to left, hsla(230, 63%, 11%, 0.5), hsla(0, 0%, 0%, 0.5), hsla(230, 63%, 11%, 0.5));
  color: #9EA6CC;
  header { margin: 9px;}
  grid {
    label.week-number{ color: #1C2552; }
    label.day-name { text-transform: uppercase;}
    label { padding: 3px; padding-left: 0px; padding-right: 0px; margin: 2px;}
    label.other-month { color: gtkalpha(#9EA6CC, 0.5);}
    label.today{ color: #0A102E; background-color: #9EA6CC; border-radius: 99px; font-weight: bold; }
    padding: 5px;
  }
}

.battery levelbar{
  trough {
    padding-top: 4.5px;
    padding-bottom: 4.5px;
    block.filled { background: linear-gradient(to right, hsla(229, 65%, 12%, 0.5) 55%, #1832e7); }
    block { background: #0b123280; }
  }
}

.decoration-card {
  background: linear-gradient(to top, hsla(230, 63%, 11%, 0.5), hsla(0, 0%, 0%, 0.5), hsla(230, 63%, 11%, 0.5));
  border: 1.5px solid #0A102E;
}

.track-title {
  font-family: Chakra Petch;
  font-size: 11px;
  color: #9EA6CC;
  font-weight: 600;
  margin-bottom: 7px;
}

.layer-namespace {
  font-family: Rajdhani;
  font-size: 10px;
  color: #9EA6CC;
  font-weight: 600;
}

.control-collection {
  min-width: 50px;
  min-height: 80px;
  font-size: 10px;
  .title-content {
    text-transform: uppercase;
    font-family: Chakra Petch;
    font-size: 9px;
    font-weight: bold;
    letter-spacing: 1.1px;
  }
  .container:hover .overlay {
    opacity: 0.17;
  }
  .container:hover .alt-overlay {
    filter: brightness(1.5);
  }
  .alt-entry:hover, .entry:hover {
    // background-color: gtkalpha(#0f1849, 0.6);
    color: #2043ff;
  }
  .container:active .overlay { filter: brightness(3); opacity: 1; }
  .container:active .alt-overlay { filter: brightness(3); opacity: 0.8; }
  .entry:active { color: black; }
  .alt-entry:active { color: #2752ff; }
  .alt-entry {
    font-family: Rajdhani;
    font-size: 9px;
    font-weight: 600;
    color: #1832e7;
    padding: 5px;
  }
  .entry {
    color: black;
    padding: 5px;
  }
  .last-chunk { padding-top: 10px; }
  .first-chunk { padding-bottom: 10px; }
}

.workspace-container {
  .item {
    background-color: #0b123280;
    min-height: 3px;
  }
  .focused-item {
    background-color: #1832e7;
  }
}

tooltip {
  label { 
    padding: 7px;
    background-color: gtkalpha(#152052, 0.1);
    text-transform: uppercase; 
  }
  background: linear-gradient(to bottom, #070B1F, #040714);
  margin: 5px;
  box-shadow: 0px 0px 5px gtkalpha(black, 0.5);
  border: 1.5px solid #0A102E;
  font-family: Rajdhani;
  font-size: 9px;
  color: #9EA6CC;
  font-weight: 600;
}

.graph-container {
  $color: (#1A39ED, #F32626);
  margin: 3px;
  padding: 3px;
  border-radius: 1.5px;
  border-width: 1px;
  border-style: solid;
  border-color: rgba(list.nth($color, 1), .3);
  box-shadow: inset 0px 0px 4px 2px rgba(list.nth($color, 1), .2), 0px 0px 2px rgba(list.nth($color, 1), .2);

  .separator {
    min-width: 2px;
    background-color: list.nth($color, 1);
    &.critical { background-color: list.nth($color, 2); }
  }

  .graph {
    min-width: 85px;
    min-height: 30px;
    padding-left: 3px;
    &.critical-graph { @include apply-alt-blink-animation(1s); } // Critical on the graph
  }
  label { 
    box-shadow: unset;
    color: list.nth($color, 1); 
    padding-bottom: 5px;
    text-shadow: 2px 1px 4px rgba(list.nth($color, 1), 0.5);
    font-family: CozetteVector; font-weight: bold; letter-spacing: 0.7px;
    &.critical {  // Critical on label
      box-shadow: unset;
      color: list.nth($color, 2); 
      text-shadow: 2px 1px 4px rgba(list.nth($color, 2), 0.5);
    }
  }
  &.critical { border-color: rgba(list.nth($color, 2), .3); box-shadow: inset 0px 0px 5px 2px rgba(list.nth($color, 2), .2), 0px 0px 2px rgba(list.nth($color, 2), .2) } // Critical on container
}

